tests/NormalTests/paczka1/fuzzy1/31969616.err
Error in line 7: zZlSZ2rJZK S800 17,6
Error in line 9: WB4QPZm1kM S800 66,6
Error in line 13: zZlSZ2rJZK A135 82,0
Error in line 20: zZlSZ2rJZK S953 10,8
Error in line 30: lfxZXE7Usc S800 84,7
